Fix text visibility in dark mode

--- a/src/components/HappyStorySection/HappyStorySection.css
+++ b/src/components/HappyStorySection/HappyStorySection.css
@@ -10,4 +10,5 @@
   font-weight: 800;
   line-height: 1;
   padding: 100px 0 32px;
+  color: #0a0c20;
 }
